@@ -214,7 +214,7 @@ class PluginsModelPlugin extends JModelForm
 
 		// Load the core and/or local language file(s).
 		$lang->load('plg_'.$folder.'_'.$element, $client->path.'/plugins/'.$folder.'/'.$element);
-		$lang->load('plg_'.$folder.'_'.$element, JPATH_SITE);
+		//$lang->load('plg_'.$folder.'_'.$element, JPATH_SITE);
 		$lang->load('plg_'.$folder.'_'.$element, JPATH_ADMINISTRATOR);
 
 		// If an XML file was found in the component, load it first.
