@@ -163,8 +163,9 @@ class TemplatesModelStyle extends JModelForm
 
 		// Load the core and/or local language file(s).
 		$lang->load('tpl_'.$template, $client->path.DS.'templates'.DS.$template);
-		$lang->load('tpl_'.$template, JPATH_SITE);
-		$lang->load('tpl_'.$template, JPATH_ADMINISTRATOR);
+		//$lang->load('tpl_'.$template, JPATH_SITE);
+		//$lang->load('tpl_'.$template, JPATH_ADMINISTRATOR);
+		$lang->load('tpl_'.$template, $client->path);
 
 		if (file_exists($formFile))
 		{
