@@ -2,8 +2,28 @@
 ; Joomla! Project
 ; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8 - No BOM
+; Note : All ini files need to be saved as UTF-8
 
-AND="and"
-VALID="valid"
+RHUK_MILKYWAY="RHUK Milkyway template"
+TPL_RHUK_MILKYWAY="MilkyWay is a fresh new template for Joomla!. The clean design of this template makes it very lightweight and fast."
 
+MILKY_BACKGROUND_VARIATION_DESC="Background color variation to use"
+MILKY_BACKGROUND_VARIATION_LABEL="Background Variation"
+MILKY_COLOR_VARIATION_DESC="Color variation to use"
+MILKY_COLOR_VARIATION_LABEL="Color Variation"
+MILKY_TEMPLATE_WIDTH_DESC="Width style of the template"
+MILKY_TEMPLATE_WIDTH_LABEL="Template Width"
+
+MILKY_BLACK="Black"
+MILKY_BLUE="Blue"
+MILKY_FLUID="Fluid"
+MILKY_FLUID_WITH_MAXIMUM="Fluid with maximum"
+MILKY_GREEN="Green"
+MILKY_MEDIUM="Medium"
+MILKY_ORANGE="Orange"
+MILKY_RED="Red"
+MILKY_SMALL="Small"
+MILKY_WHITE="White"
+
+TPL_RHUK_MILKYWAY_AND="and"
+TPL_RHUK_MILKYWAY_VALID="valid"
