@@ -152,7 +152,7 @@ defined('_JEXEC') or die;
 					</p>
 					<p id="power_by">
 						<?php echo JText::_('POWERED_BY') ?> <a href="http://www.joomla.org">Joomla!</a>.
-						<?php echo JText::_('Valid') ?> <a href="http://validator.w3.org/check/referer">XHTML</a> <?php echo JText::_('and') ?> <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>.
+						<?php echo JText::_('TPL_RHUK_MILKYWAY_VALID') ?> <a href="http://validator.w3.org/check/referer">XHTML</a> <?php echo JText::_('TPL_RHUK_MILKYWAY_AND') ?> <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>.
 					</p>
 				</div>
 			</div>
