@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 
 05-Feb-2010 Christophe Demko
+^ Having only one translation file per template (in administrator/language for admin ones and language for site ones)
 # Translating buttons in the editor
 ^ Adding readonly attribute on some jform fields
 
